minor wording edit

--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
                   </li>
                   <li>
                     It was built with TypeScript, Express, Nodejs, React,
-                    React-Router, Redux-Toolkit, Socket.io, CSS,
-                    Express-Session, Redis, Neo4j, MongoDB, and Cassandra.
+                    React-Router, Redux, Socket.io, CSS, Express-Session, Redis,
+                    Neo4j, MongoDB, and Cassandra.
                   </li>
                   <li>It's currently deployed on Render.</li>
                   <li>
@@ -435,7 +435,7 @@
                     currently under active development.
                   </li>
                   <li>
-                    It's being built with Go, TypeScript, React, Redux,
+                    It's being built with Go, TypeScript, CSS, React, Redux,
                     React-Router, Neo4j, and MongoDB.
                   </li>
                   <li>
