added rich text editor to projects

--- a/index.html
+++ b/index.html
@@ -471,6 +471,31 @@
                 </ul>
               </div>
             </article>
+            <article>
+              <section>
+                <h4>Rich Text Editor:</h4>
+                <a
+                  href="https://github.com/Matt-Eva/javascript-text-editor"
+                  target="_blank"
+                  >GitHub</a
+                >
+                <a
+                  href="https://matt-eva.github.io/javascript-text-editor/"
+                  target="_blank"
+                  >Live Demo</a
+                >
+              </section>
+              <button class="read-more">read more</button>
+              <div class="hidden-content revealed-content">
+                <ul>
+                  <li>
+                    A browser-based rich text editor for formatting text and
+                    embedding images and links. Custom built with JavaScript.
+                    Currently under active development.
+                  </li>
+                </ul>
+              </div>
+            </article>
           </section>
           <!-- <section>
             <h3>Sandbox</h3>
