added shell / terminal to developer tools
added missing periods

--- a/index.html
+++ b/index.html
@@ -273,23 +273,23 @@
             </article>
             <article>
               <h3>Frontend Tools and Frameworks</h3>
-              <p>HTML, CSS, React, Redux, React-Router</p>
+              <p>HTML, CSS, React, Redux, React-Router.</p>
             </article>
             <article>
               <h3>Backend Tools and Frameworks</h3>
-              <p>Nodejs, Express, Flask, Ruby on Rails</p>
+              <p>Nodejs, Express, Flask, Ruby on Rails.</p>
             </article>
             <article>
               <h3>Databases</h3>
-              <p>Relational Databases (SQL), Neo4j (Cypher), MongoDB</p>
+              <p>Relational Databases (SQL), Neo4j (Cypher), MongoDB.</p>
             </article>
             <article>
               <h3>Developer Tools</h3>
-              <p>Git / GitHub</p>
+              <p>Shell / Terminal, Git / GitHub.</p>
             </article>
             <article>
               <h3>Learning</h3>
-              <p>Docker, Java, Go</p>
+              <p>Docker, Java, Go.</p>
             </article>
           </section>
           <section id="topics">
