--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <a href="#about" class="nav-link">about</a>
         <a href="#experience" class="nav-link">experience</a>
         <a href="#projects" class="nav-link">projects</a>
-        <a href="#blogs" class="nav-link">blogs</a>
+        <a href="#writing" class="nav-link">writing</a>
+        <a href="#testimonials" class="nav-link">testimonials</a>
       </nav>
     </header>
     <div id="container">
@@ -138,131 +139,6 @@
                   out or say hi, even if you don't have a job for me!
                 </li>
               </ul>
-            </div>
-
-            <button class="read-more about-button">student testimonials</button>
-            <div id="testimonials" class="hidden-content">
-              <p id="student-anonymity">
-                <em>
-                  student names have been kept anonymous to respect their
-                  privacy</em
-                >
-              </p>
-              <p>
-                "Matt Eva is the best possible Instructor I could have worked
-                with in phase 1. He is an excellent teacher. He always started
-                at ground zero with the material, which was crucial for our
-                learning process.""
-              </p>
-              <p>
-                "I loved working with Matt. He does an amazing job breaking down
-                and explaining tricky concepts and I have no doubt that he is
-                crucial to the ongoing success of our cohort."
-              </p>
-              <p>
-                "Matt is amazing. He is such a solid coach, and is very good at
-                teaching."
-              </p>
-              <p>
-                "A day without Matt's Study Hall is like a day without sunshine.
-                Fantastic teacher, can't put a high enough score on that. Matt
-                is a top performer, A plus with distinction!"
-              </p>
-              <p>
-                "Matt is a great technical coach and a great person. He has a
-                knack for simplifying and breaking down complex concepts and I
-                have no doubt that he was crucial to my success in this phase."
-              </p>
-              <p>
-                "Really enjoy how approachable Matt is and how easy it is to
-                contact him!"
-              </p>
-              <p>
-                "Matt fostered a safe space for me to learn and ask questions,
-                and does a really great job of asking questions to encourage us
-                to think critically by guiding us to the answer instead of
-                giving us the answer."
-              </p>
-              <p>
-                "Really loved getting Matt's insight and found the 1 on 1s and
-                study halls very helpful!"
-              </p>
-              <p>
-                "Matt does amazing work with clarifying concepts and ideas that
-                helps us understand our code a lot more easier and readable as
-                well. He is super helpful and patience regarding my concerns and
-                situations."
-              </p>
-              <p>
-                "I appreciate Matt's patience and flexibility. He's been a big
-                help."
-              </p>
-              <p>
-                "Matt moved slowly and ensured that questions were addressed and
-                students were respected. He made space for even the most
-                introverted of us."
-              </p>
-              <p>
-                "Matt is FANTASTIC! He consistently does a great job breaking
-                down the concepts in simple to comprehend language and provide
-                encouragement along the way."
-              </p>
-              <p>"very resourceful and patient."</p>
-              <p>
-                "I really enjoyed all instructional time with Matt. He was very
-                informative and willing to take the time to explain concepts
-                with as much depth as needed. Matt is really detail-oriented."
-              </p>
-              <p>
-                "Matt is great. He does a great job at helping you think
-                logically through the problem you are faced with and not just
-                giving you the answers. He listens to what you are trying to
-                accomplish and then helps guide you to the best answer."
-              </p>
-              <p>
-                "Everyone has been great but I have to specifically point out
-                that Matt has been beyond incredible to learn from. He never
-                gives me the full answer but always perfectly helps lead me in
-                the direction I need to go, he is extremely patient and
-                understanding, I couldn't have imagined a better fit for his
-                role."
-              </p>
-              <p>
-                "Matt has been awesome. He's gone out of his way to help and has
-                been a great resource up to this point."
-              </p>
-              <p>
-                "Matt has always been so helpful, both in terms of helping us
-                with problems that we bring to him, and also introducing new
-                ideas that can improve our programs for next time. His
-                commitment to the Socratic method means that we have more of a
-                sense of ownership over what we have done. "
-              </p>
-              <p>
-                "Matt is amazing and helped me learn so much. especially Matts
-                study hall sessions and the way he breaks things down."
-              </p>
-              <p>
-                "Matt was a phenomenal resource! His study-halls and 1:1
-                meetings were extremely helpful with solidifying my learning. I
-                felt more comfortable asking questions in the smaller group
-                setting compared to during lectures. "
-              </p>
-              <p>
-                "Study halls are extremely helpful and Matt does a great job
-                explaining and listening to what people are struggling with,
-                while teaching with patience. "
-              </p>
-              <p>
-                "I attended every study hall/demo put on by Matt. He was
-                outstanding as a teacher, having an excellent pace of speech
-                while still taking time to check for understanding. He was
-                always willing to answer questions and encouraged us as students
-                to ask them. The first 2 weeks of Phase 1 were incredibly
-                challenging for me, and I can honestly say that I would not have
-                been able to continue with the program without the help of
-                Matt."
-              </p>
             </div>
           </section>
           <section id="tools-tech">
@@ -501,9 +377,133 @@
             <h3>Sandbox</h3>
           </section> -->
         </section>
-        <section id="blogs">
-          <h2>Blogs</h2>
+        <section id="writing">
+          <h2>Writing Samples</h2>
           <p>Coming soon!</p>
+        </section>
+        <section id="testimonials">
+          <h2>Student Testimonials</h2>
+          <div id="testimonials">
+            <p id="student-anonymity">
+              <em>
+                student names have been kept anonymous to respect their
+                privacy</em
+              >
+            </p>
+            <p>
+              "Matt Eva is the best possible Instructor I could have worked with
+              in phase 1. He is an excellent teacher. He always started at
+              ground zero with the material, which was crucial for our learning
+              process.""
+            </p>
+            <p>
+              "I loved working with Matt. He does an amazing job breaking down
+              and explaining tricky concepts and I have no doubt that he is
+              crucial to the ongoing success of our cohort."
+            </p>
+            <p>
+              "Matt is amazing. He is such a solid coach, and is very good at
+              teaching."
+            </p>
+            <p>
+              "A day without Matt's Study Hall is like a day without sunshine.
+              Fantastic teacher, can't put a high enough score on that. Matt is
+              a top performer, A plus with distinction!"
+            </p>
+            <p>
+              "Matt is a great technical coach and a great person. He has a
+              knack for simplifying and breaking down complex concepts and I
+              have no doubt that he was crucial to my success in this phase."
+            </p>
+            <p>
+              "Really enjoy how approachable Matt is and how easy it is to
+              contact him!"
+            </p>
+            <p>
+              "Matt fostered a safe space for me to learn and ask questions, and
+              does a really great job of asking questions to encourage us to
+              think critically by guiding us to the answer instead of giving us
+              the answer."
+            </p>
+            <p>
+              "Really loved getting Matt's insight and found the 1 on 1s and
+              study halls very helpful!"
+            </p>
+            <p>
+              "Matt does amazing work with clarifying concepts and ideas that
+              helps us understand our code a lot more easier and readable as
+              well. He is super helpful and patience regarding my concerns and
+              situations."
+            </p>
+            <p>
+              "I appreciate Matt's patience and flexibility. He's been a big
+              help."
+            </p>
+            <p>
+              "Matt moved slowly and ensured that questions were addressed and
+              students were respected. He made space for even the most
+              introverted of us."
+            </p>
+            <p>
+              "Matt is FANTASTIC! He consistently does a great job breaking down
+              the concepts in simple to comprehend language and provide
+              encouragement along the way."
+            </p>
+            <p>"very resourceful and patient."</p>
+            <p>
+              "I really enjoyed all instructional time with Matt. He was very
+              informative and willing to take the time to explain concepts with
+              as much depth as needed. Matt is really detail-oriented."
+            </p>
+            <p>
+              "Matt is great. He does a great job at helping you think logically
+              through the problem you are faced with and not just giving you the
+              answers. He listens to what you are trying to accomplish and then
+              helps guide you to the best answer."
+            </p>
+            <p>
+              "Everyone has been great but I have to specifically point out that
+              Matt has been beyond incredible to learn from. He never gives me
+              the full answer but always perfectly helps lead me in the
+              direction I need to go, he is extremely patient and understanding,
+              I couldn't have imagined a better fit for his role."
+            </p>
+            <p>
+              "Matt has been awesome. He's gone out of his way to help and has
+              been a great resource up to this point."
+            </p>
+            <p>
+              "Matt has always been so helpful, both in terms of helping us with
+              problems that we bring to him, and also introducing new ideas that
+              can improve our programs for next time. His commitment to the
+              Socratic method means that we have more of a sense of ownership
+              over what we have done. "
+            </p>
+            <p>
+              "Matt is amazing and helped me learn so much. especially Matts
+              study hall sessions and the way he breaks things down."
+            </p>
+            <p>
+              "Matt was a phenomenal resource! His study-halls and 1:1 meetings
+              were extremely helpful with solidifying my learning. I felt more
+              comfortable asking questions in the smaller group setting compared
+              to during lectures. "
+            </p>
+            <p>
+              "Study halls are extremely helpful and Matt does a great job
+              explaining and listening to what people are struggling with, while
+              teaching with patience. "
+            </p>
+            <p>
+              "I attended every study hall/demo put on by Matt. He was
+              outstanding as a teacher, having an excellent pace of speech while
+              still taking time to check for understanding. He was always
+              willing to answer questions and encouraged us as students to ask
+              them. The first 2 weeks of Phase 1 were incredibly challenging for
+              me, and I can honestly say that I would not have been able to
+              continue with the program without the help of Matt."
+            </p>
+          </div>
         </section>
       </main>
     </div>
@@ -514,6 +514,9 @@
           href="https://www.linkedin.com/in/mattheweva/"
           target="_blank"
           >LinkedIn</a
+        >
+        <a class="nav-link" href="https://medium.com/@matteweva" target="_blank"
+          >Medium</a
         >
         <a class="nav-link" href="https://github.com/Matt-Eva" target="_blank"
           >GitHub</a
