added topics back into topics of interest

--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
             <h2>Topics of Interest</h2>
             <p>
               Full Stack Development, System Architecture and Design,
-              Scalability, Databases, Data Modeling, Accessibility.
+              Scalability, Distributed Systems, Cloud Architecture, Databases,
+              Data Modeling, Accessibility, User Centered Design.
             </p>
           </section>
         </section>
@@ -379,7 +380,23 @@
         </section>
         <section id="writing">
           <h2>Writing Samples</h2>
-          <p>Coming soon!</p>
+          <section class="section-blue">
+            <h3>Flatiron Lessons</h3>
+            <p>
+              I wrote and / or revised the following lessons while teaching at
+              Flatiron School. Some were part of the core curriculum, while
+              others I created independently.
+            </p>
+            <article>
+              <h4>Core Curriculum</h4>
+            </article>
+            <article>
+              <h4></h4>
+            </article>
+          </section>
+          <section class="section-blue">
+            <h3>Technical Blogs</h3>
+          </section>
         </section>
         <section id="testimonials">
           <h2>Student Testimonials</h2>
