removed background color from readable content

--- a/index.html
+++ b/index.html
@@ -131,10 +131,7 @@
                   I have big goals and aspirations that fuel my passion for
                   programming and my hunger for learning and growth.
                 </li>
-                <li>
-                  I'm friendly and I like people :). Don't be afraid to reach
-                  out or say hi, even if you don't have a job for me!
-                </li>
+                <li>I'm friendly and I like people!</li>
               </ul>
             </div>
           </section>
@@ -175,7 +172,7 @@
                 Object-Oriented Programming, REST APIs, CRUD actions, MVC
                 Architecture, Single Page Applications, Client-Side Routing,
                 Responsive / Mobile-First Design, Database Sharding, WebSockets,
-                HTTP.
+                HTTP, Unit Testing.
               </p>
             </article>
             <article>
