--- a/index.html
+++ b/index.html
@@ -444,158 +444,153 @@
         </section> -->
         <section id="testimonials">
           <h2>Student Testimonials</h2>
-          <div id="testimonials">
-            <p id="student-anonymity">
-              <em>
-                student names have been kept anonymous to respect their
-                privacy</em
-              >
-            </p>
-            <p>
-              "<strong
-                >Matt Eva is the best possible Instructor I could have worked
-                with in phase 1</strong
-              >. He is an excellent teacher. He always started at ground zero
-              with the material, which was crucial for our learning process."
-            </p>
-            <p>
-              "<strong>I loved working with Matt.</strong>
-              He does an amazing job breaking down and explaining tricky
-              concepts and I have no doubt that he is crucial to the ongoing
-              success of our cohort."
-            </p>
-            <p>
-              "<strong>Matt is amazing.</strong> He is such a solid coach, and
-              is very good at teaching."
-            </p>
-            <p>
-              "<strong
-                >A day without Matt's Study Hall is like a day without
-                sunshine.</strong
-              >
-              Fantastic teacher, can't put a high enough score on that. Matt is
-              a top performer, A plus with distinction!"
-            </p>
-            <p>
-              "Matt is a great technical coach and a great person.
-              <strong
-                >He has a knack for simplifying and breaking down complex
-                concepts</strong
-              >
-              and I have no doubt that he was crucial to my success in this
-              phase."
-            </p>
-            <p>
-              "<strong>Really enjoy how approachable Matt is</strong> and how
-              easy it is to contact him!"
-            </p>
-            <p>
-              "<strong
-                >Matt fostered a safe space for me to learn and ask
-                questions</strong
-              >, and does a really great job of asking questions to encourage us
-              to think critically by guiding us to the answer instead of giving
-              us the answer."
-            </p>
-            <p>
-              "<strong>Really loved getting Matt's insight</strong> and found
-              the 1 on 1s and study halls very helpful!"
-            </p>
-            <p>
-              "<strong
-                >Matt does amazing work with clarifying concepts and
-                ideas</strong
-              >
-              that helps us understand our code a lot more easier and readable
-              as well. He is super helpful and patience regarding my concerns
-              and situations."
-            </p>
-            <p>
-              "<strong>I appreciate Matt's patience and flexibility</strong>.
-              He's been a big help."
-            </p>
-            <p>
-              "Matt moved slowly and ensured that questions were addressed and
-              students were respected.
-              <strong>He made space for even the most introverted of us.</strong
-              >"
-            </p>
-            <p>
-              "<strong>Matt is FANTASTIC!</strong> He consistently does a great
-              job breaking down the concepts in simple to comprehend language
-              and provide encouragement along the way."
-            </p>
-            <p>"<strong>very resourceful and patient.</strong>"</p>
-            <p>
-              "I really enjoyed all instructional time with Matt. He was very
-              informative and willing to take the time to explain concepts with
-              as much depth as needed.
-              <strong>Matt is really detail-oriented.</strong>"
-            </p>
-            <p>
-              "Matt is great.
-              <strong
-                >He does a great job at helping you think logically through the
-                problem</strong
-              >
-              you are faced with and not just giving you the answers. He listens
-              to what you are trying to accomplish and then helps guide you to
-              the best answer."
-            </p>
-            <p>
-              "Everyone has been great but I have to specifically point out that
-              <strong>Matt has been beyond incredible to learn from.</strong> He
-              never gives me the full answer but always perfectly helps lead me
-              in the direction I need to go, he is extremely patient and
-              understanding, I couldn't have imagined a better fit for his
-              role."
-            </p>
-            <p>
-              "Matt has been awesome.
-              <strong
-                >He's gone out of his way to help and has been a great
-                resource</strong
-              >
-              up to this point."
-            </p>
-            <p>
-              "<strong>Matt has always been so helpful</strong>, both in terms
-              of helping us with problems that we bring to him, and also
-              introducing new ideas that can improve our programs for next time.
-              His commitment to the Socratic method means that we have more of a
-              sense of ownership over what we have done. "
-            </p>
-            <p>
-              "<strong>Matt is amazing and helped me learn so much.</strong>
-              especially Matts study hall sessions and the way he breaks things
-              down."
-            </p>
-            <p>
-              "<strong>Matt was a phenomenal resource!</strong> His study-halls
-              and 1:1 meetings were extremely helpful with solidifying my
-              learning. I felt more comfortable asking questions in the smaller
-              group setting compared to during lectures. "
-            </p>
-            <p>
-              "Study halls are extremely helpful and
-              <strong
-                >Matt does a great job explaining and listening to what people
-                are struggling with, while teaching with patience.</strong
-              >"
-            </p>
-            <p>
-              "I attended every study hall/demo put on by Matt. He was
-              outstanding as a teacher, having an excellent pace of speech while
-              still taking time to check for understanding. He was always
-              willing to answer questions and encouraged us as students to ask
-              them. The first 2 weeks of Phase 1 were incredibly challenging for
-              me, and
-              <strong
-                >I can honestly say that I would not have been able to continue
-                with the program without the help of Matt.</strong
-              >"
-            </p>
-          </div>
+
+          <p id="student-anonymity">
+            <em>
+              student names have been kept anonymous to respect their
+              privacy</em
+            >
+          </p>
+          <p>
+            "<strong
+              >Matt Eva is the best possible Instructor I could have worked with
+              in phase 1</strong
+            >. He is an excellent teacher. He always started at ground zero with
+            the material, which was crucial for our learning process."
+          </p>
+          <p>
+            "<strong>I loved working with Matt.</strong>
+            He does an amazing job breaking down and explaining tricky concepts
+            and I have no doubt that he is crucial to the ongoing success of our
+            cohort."
+          </p>
+          <p>
+            "<strong>Matt is amazing.</strong> He is such a solid coach, and is
+            very good at teaching."
+          </p>
+          <p>
+            "<strong
+              >A day without Matt's Study Hall is like a day without
+              sunshine.</strong
+            >
+            Fantastic teacher, can't put a high enough score on that. Matt is a
+            top performer, A plus with distinction!"
+          </p>
+          <p>
+            "Matt is a great technical coach and a great person.
+            <strong
+              >He has a knack for simplifying and breaking down complex
+              concepts</strong
+            >
+            and I have no doubt that he was crucial to my success in this
+            phase."
+          </p>
+          <p>
+            "<strong>Really enjoy how approachable Matt is</strong> and how easy
+            it is to contact him!"
+          </p>
+          <p>
+            "<strong
+              >Matt fostered a safe space for me to learn and ask
+              questions</strong
+            >, and does a really great job of asking questions to encourage us
+            to think critically by guiding us to the answer instead of giving us
+            the answer."
+          </p>
+          <p>
+            "<strong>Really loved getting Matt's insight</strong> and found the
+            1 on 1s and study halls very helpful!"
+          </p>
+          <p>
+            "<strong
+              >Matt does amazing work with clarifying concepts and ideas</strong
+            >
+            that helps us understand our code a lot more easier and readable as
+            well. He is super helpful and patience regarding my concerns and
+            situations."
+          </p>
+          <p>
+            "<strong>I appreciate Matt's patience and flexibility</strong>. He's
+            been a big help."
+          </p>
+          <p>
+            "Matt moved slowly and ensured that questions were addressed and
+            students were respected.
+            <strong>He made space for even the most introverted of us.</strong>"
+          </p>
+          <p>
+            "<strong>Matt is FANTASTIC!</strong> He consistently does a great
+            job breaking down the concepts in simple to comprehend language and
+            provide encouragement along the way."
+          </p>
+          <p>"<strong>very resourceful and patient.</strong>"</p>
+          <p>
+            "I really enjoyed all instructional time with Matt. He was very
+            informative and willing to take the time to explain concepts with as
+            much depth as needed.
+            <strong>Matt is really detail-oriented.</strong>"
+          </p>
+          <p>
+            "Matt is great.
+            <strong
+              >He does a great job at helping you think logically through the
+              problem</strong
+            >
+            you are faced with and not just giving you the answers. He listens
+            to what you are trying to accomplish and then helps guide you to the
+            best answer."
+          </p>
+          <p>
+            "Everyone has been great but I have to specifically point out that
+            <strong>Matt has been beyond incredible to learn from.</strong> He
+            never gives me the full answer but always perfectly helps lead me in
+            the direction I need to go, he is extremely patient and
+            understanding, I couldn't have imagined a better fit for his role."
+          </p>
+          <p>
+            "Matt has been awesome.
+            <strong
+              >He's gone out of his way to help and has been a great
+              resource</strong
+            >
+            up to this point."
+          </p>
+          <p>
+            "<strong>Matt has always been so helpful</strong>, both in terms of
+            helping us with problems that we bring to him, and also introducing
+            new ideas that can improve our programs for next time. His
+            commitment to the Socratic method means that we have more of a sense
+            of ownership over what we have done. "
+          </p>
+          <p>
+            "<strong>Matt is amazing and helped me learn so much.</strong>
+            especially Matts study hall sessions and the way he breaks things
+            down."
+          </p>
+          <p>
+            "<strong>Matt was a phenomenal resource!</strong> His study-halls
+            and 1:1 meetings were extremely helpful with solidifying my
+            learning. I felt more comfortable asking questions in the smaller
+            group setting compared to during lectures. "
+          </p>
+          <p>
+            "Study halls are extremely helpful and
+            <strong
+              >Matt does a great job explaining and listening to what people are
+              struggling with, while teaching with patience.</strong
+            >"
+          </p>
+          <p>
+            "I attended every study hall/demo put on by Matt. He was outstanding
+            as a teacher, having an excellent pace of speech while still taking
+            time to check for understanding. He was always willing to answer
+            questions and encouraged us as students to ask them. The first 2
+            weeks of Phase 1 were incredibly challenging for me, and
+            <strong
+              >I can honestly say that I would not have been able to continue
+              with the program without the help of Matt.</strong
+            >"
+          </p>
         </section>
       </main>
     </div>
