removed REST APIs from backend section, added Sinatra

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <article>
               <h3>Backend</h3>
               <p>
-                Gorilla, Nodejs, Express, Flask, Ruby on Rails, REST APIs,
+                Gorilla, Nodejs, Express, Flask, Ruby on Rails, Sinatra,
                 Socket.io.
               </p>
             </article>
