removed tailwind from frontend list

--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
             <article>
               <h3>Frontend</h3>
               <p>
-                HTML, CSS, Tailwind CSS, React, Redux, React-Router, Progressive
-                Web Apps.
+                HTML, CSS, React, Redux, React-Router, Progressive Web Apps.
               </p>
             </article>
             <article>
