added Redis to db section - removing cassandra

--- a/index.html
+++ b/index.html
@@ -160,10 +160,7 @@
             </article>
             <article>
               <h3>Databases</h3>
-              <p>
-                Relational Databases (SQL), Neo4j (Cypher), MongoDB, Cassandra
-                (CQL).
-              </p>
+              <p>Relational Databases (SQL), Neo4j (Cypher), MongoDB, Redis.</p>
             </article>
             <article>
               <h3>Developer Tools</h3>
